# mapping_robot

./: .gitmodules  readme
.gazebo/models/hokuyo/: model.sdf
.gazebo/models/imu/: model.config  model.sdf  model.urdf  model.urdf.xacro  sensor.sdf  sensor.urdf
.gazebo/models/kinect/: model.sdf
.gazebo/models/mapping_robot/: mapping_robot_mesh.world  model.config  model.sdf
catkin_ws/devel/: .catkin  .rosinstall
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros_msgs/: CMakeLists.txt  package.xml
darknet_ros/darknet_ros_msgs/msg/: ObjectCoordinates.msg
fake_odom_publisher/src/: fake_odom_publisher (kopia).cpp  fake_odom_publisher.cpp  fake_odom_publisher_2.cpp
key_teleop_robot/: CMakeLists.txt  package.xml
key_teleop_robot/scripts/: key_teleop_robot.py  talker.py
laser_values/src/: scanner.py
mapping_robot_env/: CMakeLists.txt  package.xml
mapping_robot_env/launch/: mapping_robot_env.launch
mapping_robot_env/sdf/: model.sdf
mapping_robot_env/urdf/: imu.xacro
my_hol_robot_plugin/: CMakeLists.txt  gazebo_ros_imu.cpp  gazebo_ros_imu_sensor.cpp  my_hol_robot.world  my_hol_robot_plugin (kopia).cc  my_hol_robot_plugin.cc  my_hol_robot_plugin2.cc  my_hol_robot_plugin3.cc
robot_setup_tf/: CMakeLists.txt  package.xml
robot_setup_tf/src/: robot_state_publisher.cpp
simple_autonomous_control/: CMakeLists.txt  package.xml
simple_autonomous_control/src/: simple_autonomous_control.py
simple_control_with_arduino/: CMakeLists.txt  package.xml
simple_control_with_arduino/src/: simple_control_with_arduino.py
(+159 files in other folders)
