<?xml version="1.0"?>
<package>
  <name>darknet_ros_msgs</name>
  <version>1.1.4</version>
  <description>Darknet is an open source neural network framework that runs on CPU and GPU. You only look once (YOLO) is a state-of-the-art, real-time object detection system.</description>
  <maintainer email="jwieww@gmail.com">Jan Wiewiorowski</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/MaciejJazik/mapping_robot</url>
  <author email="jwieww@gmail.com">Jan Wiewiorowski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
